2026-02-05 Albert Chu <chu11@llnl.gov>

	* man/ipmiconsole.8.pre.in: Fix typo

2026-01-27 Eric Fang <???>

	* libfreeipmi/locate/ipmi-locate-acpi-spmi.c
	(_ipmi_acpi_get_table_sysfs): Fix memleak.

2025-09-12 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-util.c (ipmi_sensor_decode_value)
	(ipmi_sensor_decode_raw_value): Cast with "int8_t" instead of
	"char", as "char" is not portable for signed one byte integers.

2025-02-20 Pavel Cahyna <pcahyna@redhat.com>

	* common/toolcommon/tool-config-file-common.c: Fix gcc 15
	compilation failure.

2025-01-21 Albert Chu <chu11@llnl.gov>

	* README.build: Add notes on building with systemd.

2025-01-02 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.h: Fix header guard.

	* libipmiconsole/ipmiconsole_defs.h: Move header guard macros to
	top of file.

2024-04-12 Albert Chu <chu11@llnl.gov>

	* man/ipmipower.8.pre.in: Add help about "ipmiping" workaround and
	document it is needed on Intel M50FCP.

2024-04-05 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c (ipmi_cmd): Remove duplicate
	parameter check.

2024-04-02 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	--debugfile only available in debug mode.

2024-03-25 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/ipmi-sensors-oem-intel.c: Add missing include.

2024-03-23 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.h,
	ipmi-sensors/ipmi-sensors/ipmi-sensors-oem-intel-s2600jf.h,
	ipmi-sensors/ipmi-sensors-oem-intel-s5500wb.h: Fix header guard
	definitions.

2024-03-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/ipmi-sel-string-supermicro-common.h: Add missing
	function prototype.

2024-03-22 Alex Owen

	* ipmi-oem/ipmi-oem-dell.c
	(ipmi_oem_dell_get_power_consumption_data): Increase output
	precision in cumalative energy output.

2024-02-21 Albert Chu <chu11@llnl.gov>
